--- a/tasks/single.yml
+++ b/tasks/single.yml
@@ -2,7 +2,7 @@
 - name: "Add the user {{ user_username }}"
   user:
     name: "{{ user_username }}"
-    group: "{{ user_group if user_group is defined else omit }}"
+    groups: "{{ user_groups if user_groups is defined else omit }}"
     password: "{{ user_password if user_password is defined else omit }}"
     shell: "/bin/bash"
 
